# tree-sitter-powerbuilder

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  result.txt  test-result.txt  test.sru  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_powerbuilder/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterPowerBuilder/: powerbuilder.h
bindings/swift/TreeSitterPowerBuilderTests/: TreeSitterPowerBuilderTests.swift
examples/: 01.lang  02.lang  03.lang  04.lang  05.lang  06.lang  08.lang  09.lang  comments.lang  test.sru
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: arr_declaration.txt  basic.txt  call_statement.txt  choose_case_statement.txt  comments.txt  create_statement.txt  destroy_statement.txt  escape_sequence.txt  for_statement.txt  goto_statement.txt  halt_statement.txt  identifiers.txt  if_statement.txt  labels.txt  loop_statement.txt  member_expressions.txt  statement_continuation.txt  throw_statement.txt  try_statement.txt  variable_declaration.txt
