[package]
name = "tree-sitter-powerscript"
description = "A parser for the Appeon PowerBuilder 2022 R3 scripting language "PowerScript""
version = "0.1.0"
authors = ["Mortimer Gibbons <mkirchermeier@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "powerscript"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lmortimerl/tree-sitter-powerscript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
